compiler/testData/diagnostics/tests/typealias/noRHS.kt
// RUN_PIPELINE_TILL: SOURCE
// FIR_IDENTICAL
typealias<!SYNTAX!><!>

<!SYNTAX!><!>typealias A1<!SYNTAX!><!>

<!SYNTAX!><!>typealias A2 =

<!SYNTAX!><!>typealias Valid = String
